fix text wrapping and scroll on ios

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ body {
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-overflow-scrolling: touch;
+  overflow-wrap: break-word;
 }
 
 @-ms-viewport{
